# snapmaker-u1-rfidsync

./: .gitignore  Dockerfile  README.md  compose.yaml  install.sh  nfc_spool_reader.py  pyproject.toml  remote_nfc_spool_reader.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
cfg/: 05_spoolman.cfg.tmpl
rfidsync/: __init__.py  __main__.py  app.py  assignments.py  config.py  installer.py  models.py  moonraker.py  spoolman.py  watcher.py
tests/: test_app.py  test_assignments.py  test_config.py  test_installer.py  test_models.py  test_moonraker.py  test_watcher.py
