[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "snapmaker-u1-rfidsync"
version = "1.0.0"
description = "Remote NFC/OpenSpool to Spoolman sync for the Snapmaker U1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "requests-mock>=1.11", "mypy>=1.8", "types-requests"]

[project.scripts]
rfidsync = "rfidsync.__main__:main"

[tool.setuptools]
packages = ["rfidsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
